--- a/form.html
+++ b/form.html
@@ -22,22 +22,22 @@
 
   <form id="autofill-form">
     <label for="customer-name">Customer Name</label>
-    <input type="text" id="customer-name" name="customer-name" />
+    <input type="text" id="customer-name" name="customer-name" placeholder="customer name" />
 
     <label for="model">Model</label>
-    <input type="text" id="model" name="model" />
+    <input type="text" id="model" name="model" placeholder="model" />
 
     <label for="booking-amount">Booking Amount</label>
-    <input type="text" id="booking-amount" name="booking-amount" />
+    <input type="text" id="booking-amount" name="booking-amount" placeholder="booking amount" />
 
     <label for="age">Age</label>
-    <input type="number" id="age" name="age" />
+    <input type="number" id="age" name="age" placeholder="age" />
 
     <label for="docket-no">Docket No</label>
-    <input type="text" id="docket-no" name="docket-no" />
+    <input type="text" id="docket-no" name="docket-no"  placeholder="docket no"/>
 
     <label for="edp-name">EDP Name</label>
-    <input type="text" id="edp-name" name="edp-name" />
+    <input type="text" id="edp-name" name="edp-name" placeholder="edp name" />
 
     <button type="submit">Submit</button>
   </form>
