--- a/form.html
+++ b/form.html
@@ -7,15 +7,22 @@
   <link rel="manifest" href="manifest.json">
   <style>
     body { font-family: sans-serif; padding: 20px; }
-    label { display: block; margin-top: 15px; font-weight: bold; text-transform: uppercase; }
+    label {
+      display: block;
+      margin-top: 15px;
+      font-weight: bold;
+      text-transform: uppercase;
+    }
     input {
       width: 100%;
       padding: 8px;
       margin-top: 5px;
       box-sizing: border-box;
-      text-transform: none;
     }
-    button { margin-top: 20px; padding: 10px 20px; }
+    button {
+      margin-top: 20px;
+      padding: 10px 20px;
+    }
   </style>
 </head>
 <body>
